<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/normal_spacing">

    <TextView
        android:id="@+id/questionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/question_is_nothing"
        android:textColor="@color/primary" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:visibility="gone"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/aRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/option_1"
            android:textColor="@color/black"
            android:textSize="@dimen/text" />

        <RadioButton
            android:id="@+id/bRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/option_2"
            android:textColor="@color/black"
            android:textSize="@dimen/text" />

        <RadioButton
            android:id="@+id/cRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/option_3"
            android:textColor="@color/black"
            android:textSize="@dimen/text" />

        <RadioButton
            android:id="@+id/dRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/option_4"
            android:textColor="@color/black"
            android:textSize="@dimen/text" />
    </RadioGroup>

    <TextView
        android:id="@+id/answerTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="Answer"
        android:textColor="@color/black"
        android:textSize="@dimen/text"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator" />
</LinearLayout>