<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogRoot"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recording"
        android:fontFamily="@font/poppins_extra_bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:text="00:00"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:text="@string/tap_stop_to_finish_and_save" />

    <Button
        android:id="@+id/btnStopNow"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/stop" />
</LinearLayout>