<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragment.QuizListFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/toolbar_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/outline_arrow_back_24"
        app:title="@string/quizzes"
        app:titleTextColor="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/quizRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/normal_spacing"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/normal_spacing"
        app:layout_constraintBottom_toTopOf="@+id/quizLL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
        tools:itemCount="10"
        tools:listitem="@layout/item_learning" />

    <LinearLayout
        android:id="@+id/quizLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/margin"
            android:background="@color/separator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_extra_bold"
                android:text="@string/total_submitted_quizzes"
                android:textColor="@color/primary"
                android:textSize="@dimen/sub_heading"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalQuizzesTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="@color/primary"
                android:textSize="@dimen/sub_heading"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_extra_bold"
                android:text="@string/obtained_number"
                android:textColor="@color/primary"
                android:textSize="@dimen/sub_heading"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/obtainedNumberTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="@color/primary"
                android:textSize="@dimen/sub_heading"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_extra_bold"
                android:text="@string/total_number"
                android:textColor="@color/primary"
                android:textSize="@dimen/sub_heading"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalNumberTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="@color/primary"
                android:textSize="@dimen/sub_heading"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>